# TiLiA

./: .gitignore  .pre-commit-config.yaml  .tilia.env  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml  requirements.txt  setup.cfg  tilia.nuitka-package.config.yml  tilia.spec
.github/workflows/: build.yml  python-app.yml  run-tests.yml  test-build.yml
docs/: cli-tutorial.md
scripts/: deploy.py  deploy2.py  linux-setup.sh
tests/: conftest.py  mock.py  test_app.py  test_boot.py  test_constants.py  test_dirs.py  test_export.py  test_settings.py  utils.py
tests/file/: test_file_manager.py
tests/parsers/csv/: test_beats_from_csv.py  test_harmony_from_csv.py  test_hierarchies_from_csv.py  test_markers_from_csv.py  test_pdf_from_csv.py
tests/parsers/score/: test_score_from_musicxml.py
tests/player/: test_player.py
tests/timelines/: test_metric_position.py  test_timeline_collection.py
tests/timelines/audiowave/: fixtures.py
tests/timelines/base/: test_timeline.py  test_validators.py
tests/timelines/beat/: fixtures.py  test_beat_timeline.py
tests/timelines/harmony/: fixtures.py
tests/timelines/hierarchy/: fixtures.py  test_hierarchy_timeline.py
tests/timelines/marker/: fixtures.py
tests/timelines/pdf/: fixtures.py  test_pdf_timeline.py
tests/timelines/score/: fixtures.py
tests/ui/: test_qtui.py
tests/ui/cli/: test_clear.py  test_cli_ui.py  test_generate_scripts.py  test_load_media.py  test_save.py
tests/ui/dialogs/: test_crash.py  test_inspect.py
tests/ui/timelines/: interact.py  test_timeline_ui.py  test_timelineui_collection.py
tests/ui/windows/: test_manage_timelines.py  test_media_metadata_window.py  test_windows.py
tilia/: __main__.py  app.py  boot.py  clipboard.py  constants.py  dirs.py  errors.py  exceptions.py  log.py  settings.py  undo_manager.py  utils.py
tilia/file/: autosave.py  common.py  file_manager.py  media_metadata.py
tilia/media/: exporter.py  loader.py
tilia/media/player/: __init__.py  base.py  qtplayer.py  qtvideo.py  youtube.py
tilia/parsers/: __init__.py
tilia/parsers/csv/: base.py  beat.py  common.py  harmony.py  hierarchy.py  marker.py  pdf.py
tilia/parsers/musicxml/: base.py  musicxml.xsd  score.py
tilia/parsers/score/: musicxml.py  musicxml_to_svg.py  timewise_to_partwise.xsl
tilia/requests/: __init__.py  get.py  post.py
tilia/timelines/: component_kinds.py  serialize.py  timeline_kinds.py
tilia/timelines/audiowave/: components.py  timeline.py
tilia/timelines/base/: timeline.py  validators.py
tilia/timelines/beat/: components.py  timeline.py
tilia/timelines/collection/: collection.py
tilia/timelines/harmony/: constants.py  timeline.py  validators.py
tilia/timelines/hierarchy/: components.py  timeline.py
tilia/timelines/marker/: components.py  timeline.py
tilia/timelines/pdf/: components.py  timeline.py
tilia/timelines/score/: timeline.py
tilia/timelines/slider/: timeline.py
tilia/ui/: actions.py  color.py  commands.py  coords.py  dialog_manager.py  enums.py  menubar.py  menus.py  options_toolbar.py  player.py  qtui.py  smooth_scroll.py  strings.py  ui_import.py
tilia/ui/cli/: clear.py  export.py  generate_scripts.py  io.py  load_media.py  open.py  player.py  quit.py  save.py  script.py  ui.py
tilia/ui/dialogs/: add_timeline_without_media.py  basic.py  by_time_or_by_measure.py  choose.py  (+5 more)
(+126 files in other folders)
